--- a/driver-adapters/neon-http-lambda-basic/package.json
+++ b/driver-adapters/neon-http-lambda-basic/package.json
@@ -7,6 +7,8 @@
   },
   "devDependencies": {
     "@aws-sdk/client-lambda": "3.427.0",
+    "@jest/globals": "29.7.0",
+    "@jest/types": "^29.6.3",
     "esbuild": "0.19.4",
     "jest": "28.1.3",
     "prisma": "5.5.0-dev.41"
