--- a/driver-adapters/neon-http-vercel-nextjs/package.json
+++ b/driver-adapters/neon-http-vercel-nextjs/package.json
@@ -10,6 +10,8 @@
     "postinstall": "prisma generate"
   },
   "devDependencies": {
+    "@jest/globals": "29.7.0",
+    "@jest/types": "^29.6.3",
     "jest": "28.1.3",
     "prisma": "5.5.0-dev.41",
     "vercel": "32.2.5"
