test(driver adapters): small improvements
same kind of improvements as https://github.com/prisma/ecosystem-tests/pull/4054 but in a separate PR to not make it too big

--- a/driver-adapters/postgresql-lambda-basic/package.json
+++ b/driver-adapters/postgresql-lambda-basic/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "@aws-sdk/client-lambda": "3.427.0",
+    "@jest/globals": "29.7.0",
     "@types/pg": "^8.10.2",
     "esbuild": "0.19.4",
     "jest": "28.1.3",
