--- a/driver-adapters/neon-node-basic/package.json
+++ b/driver-adapters/neon-node-basic/package.json
@@ -6,12 +6,13 @@
     "test": "jest index.test.js"
   },
   "devDependencies": {
+    "@jest/globals": "29.7.0",
     "jest": "28.1.3",
     "prisma": "5.5.0-dev.41"
   },
   "dependencies": {
-    "@prisma/adapter-neon": "5.4.2",
     "@neondatabase/serverless": "0.6.0",
+    "@prisma/adapter-neon": "5.4.2",
     "@prisma/client": "5.5.0-dev.41",
     "undici": "5.25.2"
   }
