--- a/driver-adapters/neon-vercel-nextjs/package.json
+++ b/driver-adapters/neon-vercel-nextjs/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "devDependencies": {
+    "@jest/globals": "29.7.0",
     "jest": "28.1.3",
     "prisma": "5.5.0-dev.41",
     "vercel": "32.3.1"
