--- a/driver-adapters/planetscale-lambda-basic/package.json
+++ b/driver-adapters/planetscale-lambda-basic/package.json
@@ -7,13 +7,14 @@
   },
   "devDependencies": {
     "@aws-sdk/client-lambda": "3.427.0",
+    "@jest/globals": "29.7.0",
     "esbuild": "0.19.4",
     "jest": "28.1.3",
     "prisma": "5.5.0-dev.41"
   },
   "dependencies": {
-    "@prisma/adapter-planetscale": "5.4.2",
     "@planetscale/database": "1.11.0",
+    "@prisma/adapter-planetscale": "5.4.2",
     "@prisma/client": "5.5.0-dev.41"
   }
 }
