--- a/driver-adapters/turso-node-basic/package.json
+++ b/driver-adapters/turso-node-basic/package.json
@@ -6,6 +6,7 @@
     "test": "jest index.test.js"
   },
   "devDependencies": {
+    "@jest/globals": "29.7.0",
     "jest": "28.1.3",
     "prisma": "5.5.0-dev.41"
   },
