--- a/databases/digitalocean-pgbouncer/package.json
+++ b/databases/digitalocean-pgbouncer/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+
+    "@types/jest": "28.1.8",
     "prisma": "5.6.0-dev.24"
   },
   "dependencies": {
