--- a/databases/docker-pgbouncer/package.json
+++ b/databases/docker-pgbouncer/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@prisma/client": "5.6.0-dev.24",
-    "jest": "^28.0.0"
+    "jest": "^28.0.0",
+    "pg": "8.11.3"
   }
 }
