Apply suggestions from code review
Co-authored-by: pierre <pierreantoine.urvoy@gmail.com>
Co-authored-by: Joël Galeran <Jolg42@users.noreply.github.com>

--- a/driver-adapters/tidb-node-basic/package.json
+++ b/driver-adapters/tidb-node-basic/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@prisma/client": "5.5.0-dev.58",
-    "@tidbcloud/prisma-adapter": "^5.4.2",
-    "@tidbcloud/serverless": "^0.0.6"
+    "@tidbcloud/prisma-adapter": "5.4.2",
+    "@tidbcloud/serverless": "0.0.6"
   }
 }
