feat: turso-embedded-replica

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1174,6 +1174,7 @@ jobs:
           - turso-lambda-basic
           - turso-node-basic
           - turso-vercel-nextjs
+          - turso-embedded-replica-node-basic
         clientEngine: ['library']
         os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
