--- a/.github/workflows/failing-weekly.yaml
+++ b/.github/workflows/failing-weekly.yaml
@@ -8,6 +8,8 @@ on:
 
 env:
   PRISMA_TELEMETRY_INFORMATION: 'ecosystem-tests failing-weekly.yaml'
+  # To hide "Update available x.y.z -> x.y.z"
+  PRISMA_HIDE_UPDATE_MESSAGE: true
   CI: 1
 
 defaults:
