Add to workflows

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1167,15 +1167,18 @@ jobs:
           - neon-http-vercel-nextjs
           - neon-lambda-basic
           - neon-node-basic
+          - neon-node-basic-esm
           - neon-vercel-nextjs
           - planetscale-lambda-basic
           - planetscale-node-basic
+          - planetscale-node-basic-esm
           - planetscale-vercel-nextjs
           - postgresql-lambda-basic
           - postgresql-node-basic
           - postgresql-vercel-nextjs
           - turso-lambda-basic
           - turso-node-basic
+          - turso-node-basic-esm
           - turso-vercel-nextjs
         clientEngine: ['library']
         os: [ubuntu-20.04]
