--- a/driver-adapters/planetscale-node-basic-esm/package.json
+++ b/driver-adapters/planetscale-node-basic-esm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "planetscale-node-basic",
+  "name": "planetscale-node-basic-esm",
   "version": "0.1.0",
   "private": true,
   "scripts": {
