Add to workflow

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1175,6 +1175,7 @@ jobs:
           - planetscale-vercel-nextjs
           - postgresql-lambda-basic
           - postgresql-node-basic
+          - postgresql-node-basic-esm
           - postgresql-vercel-nextjs
           - turso-lambda-basic
           - turso-node-basic
