--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1162,6 +1162,7 @@ jobs:
       fail-fast: false
       matrix:
         combo:
+          - neon-cf-basic
           - neon-http-lambda-basic
           - neon-http-node-basic
           - neon-http-vercel-nextjs
