--- a/driver-adapters/postgresql-node-basic-esm/package.json
+++ b/driver-adapters/postgresql-node-basic-esm/package.json
@@ -9,11 +9,11 @@
     "@jest/globals": "29.7.0",
     "@types/pg": "^8.10.2",
     "jest": "28.1.3",
-    "prisma": "5.7.0-dev.6"
+    "prisma": "5.7.0-integration-fix-pg-esm.1"
   },
   "dependencies": {
-    "@prisma/adapter-pg": "5.7.0-dev.6",
-    "@prisma/client": "5.7.0-dev.6",
+    "@prisma/adapter-pg": "5.7.0-integration-fix-pg-esm.1",
+    "@prisma/client": "5.7.0-integration-fix-pg-esm.1",
     "pg": "8.11.3"
   }
 }
