--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1170,6 +1170,7 @@ jobs:
           - neon-node-basic
           - neon-node-basic-esm
           - neon-vercel-nextjs
+          - planetscale-cf-basic
           - planetscale-lambda-basic
           - planetscale-node-basic
           - planetscale-node-basic-esm
