add postgresql cloudflare test

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1175,6 +1175,7 @@ jobs:
           - planetscale-node-basic
           - planetscale-node-basic-esm
           - planetscale-vercel-nextjs
+          - postgresql-cf-basic
           - postgresql-lambda-basic
           - postgresql-node-basic
           - postgresql-vercel-nextjs
