add nodejs compat

--- a/driver-adapters/turso-cf-basic/wrangler.base.toml
+++ b/driver-adapters/turso-cf-basic/wrangler.base.toml
@@ -1,7 +1,7 @@
 name = "turso-cf-basic"
 main = "src/index.js"
 compatibility_date = "2023-10-30"
-node_compat = true
+compatibility_flags = [ "nodejs_compat" ]
 
 # Note: prepare.sh will append the env vars at the end
 [vars]
