--- a/driver-adapters/postgresql-cf-basic/wrangler.base.toml
+++ b/driver-adapters/postgresql-cf-basic/wrangler.base.toml
@@ -1,7 +1,7 @@
 name = "pg-cf-basic"
 main = "src/index.js"
 compatibility_date = "2023-10-30"
-compatibility_flags = [ "nodejs_compat" ]
+node_compat = true
 
 # Note: prepare.sh will append the env vars at the end
 [vars]
