rename remaining instances of postgresql-

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1183,11 +1183,11 @@ jobs:
           - planetscale-node-basic
           - planetscale-node-basic-esm
           - planetscale-vercel-nextjs
-          - postgresql-cf-basic
-          - postgresql-lambda-basic
-          - postgresql-node-basic
-          - postgresql-node-basic-esm
-          - postgresql-vercel-nextjs
+          - pg-cf-basic
+          - pg-lambda-basic
+          - pg-node-basic
+          - pg-node-basic-esm
+          - pg-vercel-nextjs
           - turso-cf-basic
           - turso-lambda-basic
           - turso-node-basic
