simplify and cleanup mw

--- a/driver-adapters/neon-http-vercel-nextjs/package.json
+++ b/driver-adapters/neon-http-vercel-nextjs/package.json
@@ -17,6 +17,7 @@
     "vercel": "32.2.5"
   },
   "dependencies": {
+    "@neondatabase/serverless": "0.6.0",
     "@prisma/adapter-neon": "5.7.0-dev.42",
     "@prisma/client": "5.7.0-dev.42",
     "next": "14.0.3",
