--- a/driver-adapters/neon-vercel-nextjs-edgemw/package.json
+++ b/driver-adapters/neon-vercel-nextjs-edgemw/package.json
@@ -1,31 +1,27 @@
 {
-  "name": "vercel-edge-functions",
+  "name": "neon-vercel-nextjs-edgemw",
   "license": "MIT",
   "scripts": {
-    "test": "jest",
     "dev": "next dev",
-    "build": "prisma generate $PRISMA_GENERATE_FLAG && next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@prisma/client": "5.7.0-dev.42",
-    "next": "14.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@neondatabase/serverless": "0.6.0",
-    "@prisma/adapter-neon": "5.7.0-dev.42"
+    "build": "next build",
+    "start": "next start",
+    "test": "jest index.test.js",
+    "postinstall": "prisma generate"
   },
   "devDependencies": {
-    "@types/jest": "28.1.8",
-    "@types/node": "16.18.62",
-    "@types/node-fetch": "2.6.9",
-    "@types/react": "18.2.38",
+    "@jest/globals": "29.7.0",
     "jest": "28.1.3",
-    "node-fetch": "2.7.0",
-    "prisma": "5.7.0-dev.42",
-    "ts-jest": "28.0.8",
-    "ts-node": "10.9.1",
-    "typescript": "5.2.2",
+    "prisma": "5.7.0-dev.45",
     "vercel": "32.3.1"
+  },
+  "dependencies": {
+    "@neondatabase/serverless": "0.6.0",
+    "@prisma/adapter-neon": "5.7.0-dev.45",
+    "@prisma/client": "5.7.0-dev.45",
+    "next": "14.0.3",
+    "node-fetch": "2.7.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "undici": "5.27.2"
   }
 }
