--- a/driver-adapters/neon-vercel-nextjs/package.json
+++ b/driver-adapters/neon-vercel-nextjs/package.json
@@ -16,6 +16,7 @@
     "vercel": "32.3.1"
   },
   "dependencies": {
+    "@neondatabase/serverless": "0.6.0",
     "@prisma/adapter-neon": "5.7.0-dev.42",
     "@prisma/client": "5.7.0-dev.42",
     "next": "14.0.3",
