--- a/driver-adapters/neon-vercel-nextjs-edgemw/package.json
+++ b/driver-adapters/neon-vercel-nextjs-edgemw/package.json
@@ -11,13 +11,13 @@
   "devDependencies": {
     "@jest/globals": "29.7.0",
     "jest": "28.1.3",
-    "prisma": "5.7.0-dev.45",
+    "prisma": "5.7.0-integration-fix-client-wasm-loading-edgemw.2",
     "vercel": "32.3.1"
   },
   "dependencies": {
     "@neondatabase/serverless": "0.6.0",
-    "@prisma/adapter-neon": "5.7.0-dev.45",
-    "@prisma/client": "5.7.0-dev.45",
+    "@prisma/adapter-neon": "5.7.0-integration-fix-client-wasm-loading-edgemw.2",
+    "@prisma/client": "5.7.0-integration-fix-client-wasm-loading-edgemw.2",
     "next": "14.0.3",
     "node-fetch": "2.7.0",
     "react": "18.2.0",
