--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1173,6 +1173,7 @@ jobs:
           - neon-http-lambda-basic
           - neon-http-node-basic
           - neon-http-vercel-nextjs
+          - neon-vercel-nextjs-edgemw
           - neon-cf-basic
           - neon-lambda-basic
           - neon-node-basic
